--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
-h1 {
-  color: red;
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700&display=swap');
+
+* {
+  font-family: 'Montserrat', sans-serif !important;
 }
